added first post

--- a/archives.html
+++ b/archives.html
@@ -14,12 +14,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Kristin's Stuff </a></h1>
                 <nav><ul>
+                    <li><a href="/category/review.html">review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
 <h1>Archives for Kristin's Stuff</h1>
 
 <dl>
+    <dt>Thu 02 June 2016</dt>
+    <dd><a href="/my-first-test-post.html">My First Test Post</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
