--- a/authors.html
+++ b/authors.html
@@ -14,12 +14,14 @@
         <header id="banner" class="body">
                 <h1><a href="/">Kristin's Stuff </a></h1>
                 <nav><ul>
+                    <li><a href="/category/review.html">review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Kristin's Stuff</h1>
     <ul>
+        <li><a href="/author/kristin.html">Kristin</a> (1)</li>
     </ul>
 </section>
 
