--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="/">Kristin's Stuff </a></h1>
                 <nav><ul>
+                    <li><a href="/category/review.html">review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
