--- a/authors.html
+++ b/authors.html
@@ -15,6 +15,7 @@
         <nav>
             <ul>
                 <li><a href="">Home</a></li>
+                <li><a href="/pages/gallery.html">Gallery</a></li>
             </ul>
         </nav>
         <div class="header_box">
