--- a/categories.html
+++ b/categories.html
@@ -52,7 +52,7 @@
 </a>
 </li>
 <li>
-<a href="https://github.com/my-true-lover" target="_blank">Github 
+<a href="https://github.com/psalm63housewife" target="_blank">Github 
            <i class="fa fa-github fa-fw"></i>
 </a>
 </li>
